<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:showAsAction="always"
        android:id="@+id/relocate"
        android:title="@string/relocate_me"
        android:icon="@drawable/ic_action_location_off" />
    
    <item
        android:id="@+id/search"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search" />
    
    <item
        android:showAsAction="always"
        android:icon="@drawable/ic_action_overflow"
        android:id="@+id/overflow">
        <menu>
            
             <item
                 android:id="@+id/packs"
                 android:showAsAction="withText"
                 android:title="@string/data_packs">
             </item>
            
        </menu>
    </item>
    
    
</menu>