<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:visibility="gone"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:padding="9dp"
        android:background="@android:color/holo_red_dark"
        android:textColor="#FFF"
        android:text="Travel Updates For example if a car explodes in the middle of the place etc"
        android:id="@+id/travel_update" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        
		<Button
		    android:id="@+id/depart"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/departures" />
       
		<Button
		     android:id="@+id/arrive"
		     android:layout_width="0dp"
		     android:layout_weight="1"
		     android:layout_height="wrap_content"
		     android:text="@string/arrivals" />
        
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/loading"
        android:id="@+id/loading" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </android.support.v4.view.ViewPager>

</LinearLayout>